Update homepage image to fix ipad stretch bug. Test Game images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,8 @@ h6,
   margin-bottom: -20px;
 }
 
-.collection-view img {
+/*-Added div to test ipad stretching-*/
+.collection-view div img {
   max-width: 120px;
   margin: 6px;
 }
